<resources>
    <string name="glia_survey_yes_no_item_yes">Yes</string>
    <string name="glia_survey_yes_no_item_no">No</string>
    <string name="glia_dialog_yes">Yes</string>
    <string name="glia_dialog_no">No</string>
    <string name="glia_dialog_ok">OK</string>
    <string name="glia_call_visitor_video_on_hold_text">You</string>
    <string name="glia_dialog_unexpected_error_title">Something went wrong</string>
    <string name="glia_survey_cancel_label">Cancel</string>
    <string name="glia_survey_submit_label">Submit</string>
    <string name="glia_top_app_bar_chat_end">End</string>
    <string name="glia_chat_attachment_upload_error_internal_error">Internal error</string>
    <string name="glia_dialog_accept">Accept</string>
    <string name="glia_dialog_cancel">Cancel</string>
    <string name="glia_survey_open_text_item_edit_hint">Comment</string>
    <string name="message_center_send_message_btn">Send</string>
    <string name="glia_dialog_decline">Decline</string>
    <string name="glia_chat_glia_logo_content_description">Powered by Glia</string>
    <string name="glia_chat_title">Chat</string>
    <string name="glia_call_audio_app_bar_title">Audio Call</string>
    <string name="glia_call_video_button_label">Video</string>
    <string name="glia_call_video_app_bar_title">Video Call</string>
    <string name="glia_chat_add_attachment_description">Pick attachment</string>
    <string name="glia_chat_send_content_description">Send message</string>
    <string name="glia_chat_attachment_download_button_label">Download</string>
    <string name="glia_visitor_code_error_title">Could not load the visitor code. Please try refreshing.</string>
    <string name="message_center_progress_bar_content_description">Sending</string>
    <string name="glia_chat_delivered">Delivered</string>
    <string name="glia_chat_enter_message">Enter message</string>
    <string name="glia_call_connecting_with">Connecting with %1$s\n%2$s</string>
    <string name="glia_dialog_engagement_ended_title">Engagement Ended</string>
    <string name="glia_chat_attachment_upload_error_failed_to_check_safety">Failed to confirm the safety of the file.</string>
    <string name="glia_chat_attachment_upload_ready_to_send">Ready to send</string>
    <string name="glia_chat_attachment_upload_error_file_size_over_limit">The file is larger than the 25 MB limit.</string>
    <string name="glia_chat_attachment_upload_checking_file">Checking file…</string>
    <string name="message_center_description">Send a message and we\'ll get back to you \nwithin 48 hours</string>
    <string name="glia_chat_attachment_upload_uploading">Uploading file…</string>
    <string name="glia_dialog_leave_queue_title">Are you sure you want to leave?</string>
    <string name="glia_call_continue_browsing">You can continue browsing and we will connect you automatically.</string>
    <string name="message_center_confirmation_screen_title">Thank you!</string>
    <string name="glia_dialog_operators_unavailable_title">We\'re sorry</string>
    <string name="glia_dialog_leave_queue_message">You will lose your place in the queue.</string>
    <string name="glia_dialog_operators_unavailable_message">Operators are no longer available. Please try again later.</string>
    <string name="glia_call_minimize_button_label">Minimize</string>
    <string name="call_visualizer_button">End Screen Sharing</string>
    <string name="message_center_screen_title">Messaging</string>
    <string name="glia_dialog_end_engagement_title">End Engagement?</string>
    <string name="glia_chat_visitor_status_transferring">Transferring</string>
    <string name="glia_dialog_screen_sharing_offer_title">You are about to share your screen</string>
    <string name="glia_dialog_unexpected_error_message">Please try again.</string>
    <string name="glia_dialog_end_engagement_message">Are you sure you want to end engagement?</string>
    <string name="glia_dialog_engagement_ended_message">This engagement has ended.\nThank you!</string>
    <string name="glia_dialog_message_center_unavailable_title">Message Center Unavailable</string>
    <string name="glia_dialog_message_center_unavailable_message">Message center is currently unavailable. Please try again later.</string>
    <string name="glia_dialog_message_center_unauthorized_message">We could not verify your authentication status.</string>
    <string name="glia_chat_in_queue_message">We are here to help!</string>
    <string name="glia_dialog_upgrade_audio_title">%1$s has offered you to upgrade to audio</string>
    <string name="glia_dialog_upgrade_video_1_way_title">%1$s has offered you to see their video</string>
    <string name="glia_dialog_upgrade_video_2_way_title">%1$s has offered you to upgrade to video</string>
    <string name="glia_visitor_code_view_title">Your Visitor Code</string>
    <string name="glia_call_company_name_hint">Company Name</string>
    <string name="glia_chat_operator_has_joined">%1$s has joined the conversation</string>
    <string name="glia_chat_not_started_hint">Send a message to start chatting.</string>
    <string name="glia_chat_upgraded_to_audio_call">Upgraded to Audio Call</string>
    <string name="glia_chat_upgraded_to_video_call">Upgraded to Video Call</string>
    <string name="glia_chat_attachment_upload_menu_gallery">Photo Library</string>
    <string name="glia_chat_attachment_upload_menu_browse">Browse</string>
    <string name="glia_chat_attachment_upload_error_file_type_invalid">This file type is not supported.</string>
    <string name="glia_chat_attachment_downloading_label">Downloading file…</string>
    <string name="glia_chat_attachment_open_button_label">Open</string>
    <string name="glia_chat_new_messages">New Messages</string>
    <string name="glia_chat_attachment_remove_item_content_description">Remove attachment %1$s</string>
    <string name="glia_top_app_bar_close">Close</string>
    <string name="glia_call_chat_one_content_description">Chat. %1$d unread message</string>
    <string name="glia_call_chat_other_content_description">Chat. %1$d unread messages</string>
    <string name="glia_call_operator_name_hint">Operator name</string>
    <string name="glia_call_call_duration_hint">Call duration</string>
    <string name="glia_call_on_hold">On Hold</string>
    <string name="glia_call_mute_button_mute">Mute</string>
    <string name="glia_call_mute_button_unmute">Unmute</string>
    <string name="glia_call_speaker_button_label">Speaker</string>
    <string name="glia_call_continue_browsing_on_hold">You can continue browsing while you are on hold</string>
    <string name="glia_call_operator_profile_picture_content_description">Operator Avatar</string>
    <string name="glia_call_operator_video_content_description">Operator\'s Video</string>
    <string name="glia_call_visitor_video_content_description">Your Video</string>
    <string name="glia_survey_required_error_message">Please provide an answer.</string>
    <string name="glia_survey_require_label_content_description">%1$s. Required.</string>
    <string name="message_center_message_limit_error_message">The message cannot exceed 10000 characters.</string>
    <string name="message_center_title">Welcome to Message Center</string>
    <string name="message_center_check_messages_btn">Check messages</string>
    <string name="message_center_message_title">Your message</string>
    <string name="message_center_message_edit_text_hint">Enter your message</string>
    <string name="glia_messaging_title">Messaging</string>
    <string name="message_center_confirmation_screen_message">Your message has been sent. We will get back to you within 48 hours.</string>
    <string name="call_visualizer_screen_sharing_title">Screen Sharing</string>
    <string name="call_visualizer_label">Your Screen is Being Shared</string>
    <string name="glia_chat_file_download_success_message">The file has been downloaded.</string>
    <string name="glia_chat_file_download_failed_msg">Could not download the file. Please try again.</string>
    <string name="glia_chat_audio_icon_content_description">Audio icon</string>
    <string name="glia_chat_video_icon_content_description">Video icon</string>
    <string name="glia_chat_in_queue_message_content_description">%1$s. \n An MSR will be with you shortly.</string>
    <string name="glia_chat_visitor_message_content_description">Your message: %1$s</string>
    <string name="glia_chat_visitor_message_delivered_content_description">Your message: %1$s \n Delivered</string>
    <string name="glia_chat_operator_message_content_description">Operator\'s message: %1$s</string>
    <string name="glia_chat_operator_name_message_content_description">Operator %1$s, Message: %2$s</string>
    <string name="glia_chat_visitor_image_content_description">Your attached image</string>
    <string name="glia_chat_visitor_image_delivered_content_description">Your attached image. \n Delivered</string>
    <string name="glia_chat_operator_image_content_description">Operator\'s attached image</string>
    <string name="glia_chat_visitor_file_content_description">Your attached file %1$s, size %2$s</string>
    <string name="glia_chat_visitor_file_delivered_content_description">Your attached file %1$s, size %2$s. \n Delivered</string>
    <string name="glia_chat_operator_file_content_description">Operator\'s attached file %1$s, size %2$s</string>
    <string name="glia_chat_attachment_item_content_description">Attachment %1$s, size %2$s. %3$s</string>
    <string name="glia_view_file_error_message">Can\'t open file</string>
    <string name="glia_view_file_not_ready_for_preview">The image is not ready for preview. Please try again later.</string>
    <string name="glia_top_app_bar_navigate_up_content_description">Navigate Up</string>
    <string name="glia_top_app_bar_chat_end_content_description">End engagement</string>
    <string name="glia_dialog_screen_sharing_offer_enable_notifications_title">Start Screen Sharing?</string>
    <string name="glia_dialog_screen_sharing_offer_enable_notifications_message">The operator has requested to share your screen. To do this, you need to turn on app\'s notifications. Do this now?</string>
    <string name="glia_screensharing_dialog_icon_content_description">Screen sharing icon</string>
    <string name="glia_dialog_allow_notifications_title">Allow Notifications?</string>
    <string name="glia_dialog_allow_notifications_message">We would like to show you notifications in the status bar. Please enable notifications in Settings.</string>
    <string name="glia_dialog_screen_sharing_offer_message">Depending on your selection, your entire screen might be shared with the operator, not just the application window.</string>
    <string name="glia_dialog_overlay_permissions_title">Screen Overlay Permissions Required</string>
    <string name="glia_dialog_overlay_permissions_message">Allow screen overlay for the proper functioning of the app</string>
    <string name="glia_dialog_permission_error_title">Additional Permissions Required</string>
    <string name="glia_dialog_permission_error_message">Please make sure all required permissions are enabled.</string>
    <string name="glia_call_in_queue_message">An operator will be with you shortly.</string>
    <string name="glia_call_video_on_content_description">Turn off video</string>
    <string name="glia_call_video_off_content_description">Turn on video</string>
    <string name="glia_call_mute_content_description">Unmute microphone</string>
    <string name="message_center_confirmation_screen_check_messages_btn">@string/message_center_check_messages_btn</string>
    <string name="glia_dialog_engagement_ended_action_ok">@string/glia_dialog_ok</string>
    <string name="general_no">@string/glia_dialog_no</string>
    <string name="general_yes">@string/glia_dialog_yes</string>
    <string name="survey_action_validation_error">@string/glia_survey_required_error_message</string>
</resources>