<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <com.glia.widgets.view.header.AppBarView
        android:id="@+id/app_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:titleText="@string/call_visualizer_screen_sharing_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/screen_sharing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_visualizer_label"
        android:textAppearance="?attr/textAppearanceHeadline2"
        android:layout_marginBottom="@dimen/glia_large"
        android:layout_marginStart="@dimen/glia_pre_xx_large"
        android:layout_marginEnd="@dimen/glia_pre_xx_large"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/end_sharing_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.glia.widgets.view.button.GliaNegativeButton
        android:id="@+id/end_sharing_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/glia_medium"
        android:paddingBottom="@dimen/glia_medium"
        android:layout_marginStart="@dimen/glia_pre_xx_large"
        android:layout_marginEnd="@dimen/glia_pre_xx_large"
        android:text="@string/call_visualizer_button"
        app:icon="@drawable/ic_screensharing_off"
        app:iconTint="?attr/gliaBaseLightColor"
        app:iconGravity="textStart"
        app:cornerRadius="5dp"
        android:textAllCaps="false"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</merge>
