<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.glia.widgets.view.header.AppBarView
        android:id="@+id/app_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:titleText="@string/message_center_screen_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/top_space"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/icon"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_secure_message"
        app:layout_constraintTop_toBottomOf="@+id/top_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/glia_base_dark_color"
        android:textSize="20sp"
        android:text="@string/message_center_title"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/glia_base_dark_color"
        android:textSize="14sp"
        android:text="@string/message_center_description"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_check_messages"
        app:layout_constraintHorizontal_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/message_center_check_messages_btn"
        android:textAllCaps="false"
        android:textColor="@color/glia_brand_primary_color"
        android:textSize="24sp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message_title"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/glia_base_dark_color"
        android:textSize="16sp"
        android:text="@string/message_center_message_title"
        app:layout_constraintTop_toBottomOf="@+id/btn_check_messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_attachment_button"
        app:layout_constraintBottom_toTopOf="@id/message_edit_text"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <ImageButton
        android:id="@+id/add_attachment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/glia_chat_add_attachment_description"
        android:paddingTop="22dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_add_attachment"
        app:layout_constraintStart_toEndOf="@id/message_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message_edit_text" />

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/glia_base_dark_color"
        android:textColorHint="@color/glia_base_normal_color"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/message_center_message_edit_text_hint"
        android:imeOptions="actionNone"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="@dimen/glia_large"
        app:layout_constraintHeight_min="56dp"
        app:layout_constraintTop_toBottomOf="@+id/message_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/attachments_recycler_view"
        app:layout_constraintVertical_weight="7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintHeight_max="216dp"
        app:layout_constraintTop_toBottomOf="@id/message_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_send_message"
        tools:itemCount="1"
        tools:listitem="@layout/chat_attachment_uploaded_item" />

    <com.glia.widgets.view.button.GliaPositiveButton
        android:id="@+id/btn_send_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/message_center_send_message_btn"
        app:layout_constraintBottom_toTopOf="@id/bottom_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attachments_recycler_view" />

    <Space
        android:id="@+id/bottom_space"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="3" />

</merge>
